# capdDynSys-4.0

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
capdAlg/: Makefile.am  Makefile.in  configure  configure.ac
capdAlg/docs/: header_files.dox  linear_algebra.dox
capdAlg/examples/: Makefile.in  configure  configure.ac
capdAlg/examples/BigIntegers/: Makefile.am  Makefile.in
capdAlg/include/: Makefile.am  Makefile.in
capdAlg/src/: Makefile.in
capdAlg/src/capd/matrixAlgorithms/: Makefile.am  Makefile.in  PARIInterface.hpp  PARISmithForm.hpp  SmithFormFactory.cpp  SmithFormFactory.hpp  floatMatrixAlgorithms.cpp  intMatrixAlgorithms.cpp
capdAlg/tests/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
capdAlg/tests/basicalg/: TexWriterTest.cpp
capdAlg/tests/intervalTest/: Makefile.am  Makefile.in
capdAlg/tests/intvtst/: Makefile.am  Makefile.in
capdAlg/tests/matrixAlgorithms/: Makefile.am  Makefile.in  PARIInterfaceTest.cpp  SmithFixtures.cpp  SmithFormFactoryTest.cpp  floatMatrixAlgorithmsTest.cpp  intMatrixAlgorithmsTest.cpp  intMatrixAlgorithmsTest_legacy.cpp
capdAlg/tests/mptests/: Makefile.am  Makefile.in
capdAlg/tests/vecttst/: Makefile.am  Makefile.in  vecttst.cpp
capdAux/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
capdAux/examples/: Makefile.in  configure  configure.ac
capdAux/examples/auxildemo/: BuildInfoMain.cpp  Makefile.am  Makefile.in  argdemo.cpp
capdAux/examples/configFileReader/: Makefile.am  Makefile.in  configFileReader.cpp  configFileReader2.cpp
capdAux/examples/krakdemo/: Makefile.am  Makefile.in
capdAux/examples/logger/: Makefile.am  Makefile.in  logger.cpp
capdAux/include/: Makefile.am  Makefile.in
capdAux/include/capd/: config-capdAux.h.in
capdAux/include/capd/auxil/: ConfigFileReader.h  Logger.h  minmax.h
capdAux/include/capd/krak/: atom.h  chain.h  job.h  krak-lib.h
capdAux/include/capd/settings/: compilerSetting.h
capdAux/src/: Makefile.in
capdAux/src/capd/: Makefile.in
capdAux/src/capd/auxil/: Logger.cpp  Makefile.am  Makefile.in  arg_deprecated_20141101.cpp  logger_deprecated_20141101.cpp
capdAux/src/capd/krak/: Makefile.am  Makefile.in  appl-mac.c  atom.cpp  chain.cpp  color.cpp  coord3d.cpp  dos16.c  frame.cpp  frstring.cpp  item.cpp  job.cpp  kernel.cpp  linux.c  ms-dos.c  ms-dosch.c  ms-win31.c  ms-win95.c  noframe.cpp  primitiv.cpp  sun-os.c  sun.c  sun_v.c  unix-ch.c  unix_ch.c  usermove.cpp  wxWin.c
capdAux/tests/: Makefile.in  configure  configure.ac
capdAux/tests/auxilTests/: LoggerTest.cpp  Makefile.am  Makefile.in
capdDynSys4/: .project  Makefile.am  Makefile.in  configure  configure.ac
capdDynSys4/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
capdDynSys4/docs/: Doxyfile
capdDynSys4/examples/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
capdDynSys4/examples/LorenzPeriodicOrbit/: LorenzPeriodicOrbit.cpp  Makefile.am  Makefile.in
capdDynSys4/examples/RosslerChaoticDynamics/: Makefile.am  Makefile.in  RosslerChaoticDynamics.cpp  RosslerChaoticDynamics.dox
capdDynSys4/examples/RosslerPeriodicOrbit/: Makefile.am  Makefile.in  RosslerPeriodicOrbit.cpp
capdDynSys4/examples/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
capdDynSys4/examples/cndemo/: Makefile.am  Makefile.in
capdDynSys4/examples/coveringRelation/: Makefile.am  Makefile.in  coveringRelations2D_a.cpp  coveringRelations2D_b.cpp  coveringRelations2D_c.cpp
capdDynSys4/examples/diffIncldemo/: Makefile.am  Makefile.in  diffInclExample.cpp
capdDynSys4/examples/encloseTrajectory/: Makefile.am  Makefile.in
capdDynSys4/examples/graphicalSet/: Makefile.am  Makefile.in  graphicalSetTest.cpp
capdDynSys4/examples/integrate/: Makefile.am  Makefile.in
capdDynSys4/examples/invariantSet/: Makefile.am  Makefile.in
capdDynSys4/examples/maps/: Makefile.am  Makefile.in  hessianExample.cpp  jetExample.cpp  jetIndexingExample.cpp  jetTransportExample.cpp  mapExample.cpp  maps.dox
capdDynSys4/examples/multiPrecision/: Makefile.am  Makefile.in
capdDynSys4/examples/newton/: Makefile.am  Makefile.in
capdDynSys4/examples/odes/: Makefile.am  Makefile.in
capdDynSys4/examples/odesrig/: ITimeMapExample.cpp  Makefile.am  Makefile.in  odes_rigorous.dox
capdDynSys4/examples/poincare/: DPoincareMapDerivativeExample.cpp  IPoincareMapDerivativeExample.cpp  IPoincareMapExample.cpp  Makefile.am  Makefile.in
capdDynSys4/examples/pointst/: Makefile.am  Makefile.in  pointst.cpp
capdDynSys4/examples/taylor/: Makefile.am  Makefile.in  tayltst.cpp
capdDynSys4/include/: Makefile.am  Makefile.in
capdDynSys4/src/: Makefile.in
capdDynSys4/tests/: Makefile.am  Makefile.in  configure  configure.ac
capdDynSys4/tests/BasicCnTaylorTest/: BasicCnTaylorTest.cpp  Makefile.am  Makefile.in
capdDynSys4/tests/CnSolverTest/: Makefile.am
capdDynSys4/tests/ReversiblePoincareMapTest/: Makefile.am
capdDynSys4/tests/ReversibleSolverTest/: Makefile.am  ReversibleSolverTest.cpp
capdDynSys4/tests/SolverGetStepTest/: Makefile.am  checkGetStep.h
capdDynSys4/tests/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
capdDynSys4/tests/diffIncl/: Makefile.am  Makefile.in
capdDynSys4/tests/dynset/: FactorReorganizationSpecific.hpp  Makefile.am  Makefile.in
capdDynSys4/tests/map/: Makefile.am  Makefile.in  acosTest.cpp  asinTest.cpp  atanTest.cpp  cosTest.cpp  expTest.cpp  logTest.cpp  sinTest.cpp
capdDynSys4/tests/nonAutTest/: Makefile.am  Makefile.in  nonAutTest.cpp
capdExt/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
capdExt/filibsrc/: Makefile.am  Makefile.in  configure  configure.in
capdExt/include/: Makefile.in
capdExt/src/: Makefile.in
capdMake/debian/: control
capdMake/libcapd/: Makefile.am  Makefile.in  capd-gui.pc.in  capd.pc.in  configure  configure.ac  main_entry.cpp  mpcapd-gui.pc.in  mpcapd.pc.in
capdMake/m4/: boost.m4
capdMake/make/: common_makefile.mkf  common_programs_makefile.mkf  (+8 more)
(+344 files in other folders)
